refactor arg arrays into InterpolatorParam objects

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,5 @@ mock_*
 *.out
 
 # Integration test output
-test/data/generated.yml
-test/data/generated_ops
+test/data/*/generated.yml
+test/data/*/generated_ops
